fix:error message and heigth overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@
 .login-container > form {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 1.5rem;
     width: 100%;
 }
 
